# guism-example

./: .gitignore  Main.hs  default.nix  guism-example.cabal  shell.nix
GUISM/: Gtk.hs  Syntax.hs
GUISM/Gtk/: EventListener.hs  Markup.hs
app/: Main.hs
lib/Control/Control/Monad/Indexed/: IO.hs
lib/GUISM/: Gtk.hs
lib/GUISM/Base/: WindowUserInterface.hs
nix/: gi-gtk-declarative.json
